# agentic-crypto-trader

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  COMPETITION_FRONTEND_HANDOFF.md  EXEC_LAG_FIX_SPEC.md  LICENSE  README.md  pyproject.toml
.claude/agents/: market-indicator-expert.md  onchain-custody-engineer.md  principal-engineer.md  quant-analyst.md  rl-ml-trainer.md
.claude/commands/: orient.md  rl-loop.md
.deploy/: provision-apentic-data.ps1
.design-export-simulated/: Apentic Simulated Trades.html  HANDOFF.md  apentic-backtest.js  apentic-charts.jsx  apentic-components.jsx  apentic-data.js  apentic-sim-charts.jsx  apentic-sim-panels.jsx  apentic-sim.css  apentic.css
.obsidian/: workspace.json
.obsidian-vault/.obsidian/: graph.json  workspace.json
.obsidian-vault/BNB Hackathon/: AI Training.md  Agent Communication Contract.md  Apentic Data Contract.md  BNB Hack - AI Trading Agent Edition.md  Build Log.md  Dashboard Leaderboard.md  EC2 Trading Host Runbook.md  Experiment Log.md  Index.md  Live Forward-Run Harness.md  MCP Server.md  Market Conditions.md  Pool-Event Data Layer.md  Probe Suite.md  Project Overview.md  Real-time Monitoring.md  Remote Capabilities.md  Security and Encryption.md  Simulated Market.md  Social Media Scanner.md  Strategy Logic.md  TWAK Spike Runbook.md  Tech Stack.md  Token Universe.md  Trade Reasoning Capture.md  Trading Strategies.md
.obsidian-vault/Past Work/: TradeSim.md  apentic_tradesim_case_study.md
.obsidian-vault/References/: README.md
deploy/: README.md  agent-card.template.json  inspect_universe.py  launch-bdm.json  launch-tags.json  private-model-store.md  trader-agent.service  trader-daily-scan.service  trader-daily-scan.timer  trader-event-agent.service  trader-live-event-agent.service  trader-twak.sh  trader.env.template  verify-host.sh
deploy/iam/: market-metrics-put-policy.json  private-models-get-policy.json  private-models-put-policy.json  trading-put-only-policy.json
experiments/: champion.json  ledger.jsonl
runs-rl/rung0-intraday-v2/: manifest.json
runs-rl/rung0-rotation-v4/: manifest.json
runs-rl/rung0-test/: manifest.json
scripts/: _parity_prep.py  audit_bundles.py  audit_data.py  backfill_competition_history.py  backfill_missing_hours.py  build_cmc_ohlcv.py  build_factor_features.py  build_ledger.py  calib_published_runup.py  calib_rotation_runup.py  calibrate_gecko_lag.py  chain_backfill.py  clean_manifest.py  compare_candle_feeds.py  compare_seeds.py  compare_sweep.py  competition_hourly.ps1  crash_test.py  delist_sim_model.py  diag_deviation_alpha.py  diag_token_events.py  diag_token_pnl.py  diag_universe_churn.py  dispatch_demo.py  download_anchor.py  download_ohlcv.py  eval_rung0.py  eval_weekly_baselines.py  export_demo_run.py  forensics.py  ic_analysis.py  live_exec_smoke.py  oos_validate.py  parity_signals.py  preflight_entry_forward.py  preflight_residual.py  preflight_rule_default.py  preflight_selector.py  preflight_skeleton_ceiling.py  probe_candle_exit.py  (+68 more)
tests/: test_agent_loop.py  test_agent_publish.py  test_anchor.py  test_backtest.py  test_basket_overlay.py  test_candidate.py  test_candles.py  test_chain_events.py  test_chain_panels.py  test_cmc.py  test_cmc_market.py  test_competition.py  test_crash.py  test_curriculum.py  test_daily_scan.py  test_data_screen.py  test_discrete_riskparity.py  test_downloader.py  test_env.py  test_env_rung0_obs.py  test_event_agent.py  test_event_env.py  test_event_live.py  test_event_runner.py  test_execute_trade.py  test_experiment.py  test_factor.py  test_goplus.py  test_honest_gate.py  test_ic.py  test_indicators.py  test_live_data.py  test_live_data_settle.py  test_live_event_agent.py  test_loop_driver.py  test_market_metrics.py  test_mcp_loop.py  test_metrics.py  test_portfolio_markers.py  test_publish_leaderboard.py  (+16 more)
(+226 files in other folders)
