[project]
name = "agentic-crypto-trader"
version = "0.1.0"
description = "Autonomous self-custody crypto trading agent for BNB Chain (hackathon Track 1)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    # Per-phase additions (kept lean until needed):
    # data:      `data` extra below (pandas, pyarrow); httpx later for CMC/BscScan
    # execution: TWAK is driven via the `twak` CLI/MCP
    # strategy:  numpy, ta
    # training:  stable-baselines3, sb3-contrib, gymnasium, torch
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Data layer: GeckoTerminal OHLCV -> resumable Parquet cache (trader.data.downloader)
data = ["pandas>=2.2", "pyarrow>=15"]

[project.scripts]
trader-mcp = "trader.mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
