[project]
name = "agentic-crypto-trader"
version = "0.1.0"
description = "Autonomous self-custody crypto trading agent for BNB Chain (hackathon Track 1)"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    # Per-phase additions (kept lean until needed):
    # data:      `data` extra below (pandas, pyarrow); httpx later for CMC/BscScan
    # execution: TWAK is driven via the `twak` CLI/MCP
    # strategy:  numpy, ta
    # training:  stable-baselines3, sb3-contrib, gymnasium, torch
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Data + features: OHLCV cache, indicator pipeline (ported from TradeSim), ccxt anchor
data = ["pandas>=2.2", "pyarrow>=15", "ta>=0.11", "ccxt>=4.4"]
# Remote training: publish run bundles to S3 / Cloudflare R2 (the generic `remote_train` pkg)
remote = ["boto3>=1.34"]
# RL training (desktop host only): gymnasium adapter + PPO. torch is installed CPU-only there
# (the env itself is pure numpy/pandas and needs none of this — see trader.train.env).
training = ["gymnasium>=0.29", "stable-baselines3>=2.3", "sb3-contrib>=2.3"]

[project.scripts]
trader-mcp = "trader.mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `remote_train` is a standalone, trading-agnostic package (extractable to its own repo).
packages = ["src/trader", "src/remote_train"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
